// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Btn /> form Btn renders properly 1`] = `
<Btn
  form="test form"
  text="form button text"
  title="form button"
  type="submit"
>
  <WithStyles(Tooltip)
    id="tooltip-icon"
    title="form button"
  >
    <Tooltip
      classes={
        Object {
          "popper": "MuiTooltip-popper-2",
          "popperClose": "MuiTooltip-popperClose-3",
          "root": "MuiTooltip-root-1",
          "tooltip": "MuiTooltip-tooltip-4",
          "tooltipOpen": "MuiTooltip-tooltipOpen-9",
          "tooltipPlacementBottom": "MuiTooltip-tooltipPlacementBottom-8",
          "tooltipPlacementLeft": "MuiTooltip-tooltipPlacementLeft-5",
          "tooltipPlacementRight": "MuiTooltip-tooltipPlacementRight-6",
          "tooltipPlacementTop": "MuiTooltip-tooltipPlacementTop-7",
        }
      }
      disableTriggerFocus={false}
      disableTriggerHover={false}
      disableTriggerTouch={false}
      enterDelay={0}
      enterTouchDelay={1000}
      id="tooltip-icon"
      leaveDelay={0}
      leaveTouchDelay={1500}
      placement="bottom"
      theme={
        Object {
          "breakpoints": Object {
            "between": [Function],
            "down": [Function],
            "keys": Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ],
            "only": [Function],
            "up": [Function],
            "values": Object {
              "lg": 1280,
              "md": 960,
              "sm": 600,
              "xl": 1920,
              "xs": 0,
            },
            "width": [Function],
          },
          "direction": "ltr",
          "mixins": Object {
            "gutters": [Function],
            "toolbar": Object {
              "@media (min-width:0px) and (orientation: landscape)": Object {
                "minHeight": 48,
              },
              "@media (min-width:600px)": Object {
                "minHeight": 64,
              },
              "minHeight": 56,
            },
          },
          "overrides": Object {},
          "palette": Object {
            "action": Object {
              "active": "rgba(0, 0, 0, 0.54)",
              "disabled": "rgba(0, 0, 0, 0.26)",
              "disabledBackground": "rgba(0, 0, 0, 0.12)",
              "hover": "rgba(0, 0, 0, 0.08)",
              "selected": "rgba(0, 0, 0, 0.14)",
            },
            "background": Object {
              "default": "#fafafa",
              "paper": "#fff",
            },
            "common": Object {
              "black": "#000",
              "white": "#fff",
            },
            "contrastThreshold": 3,
            "divider": "rgba(0, 0, 0, 0.12)",
            "error": Object {
              "contrastText": "#fff",
              "dark": "#d32f2f",
              "light": "#e57373",
              "main": "#f44336",
            },
            "getContrastText": [Function],
            "grey": Object {
              "100": "#f5f5f5",
              "200": "#eeeeee",
              "300": "#e0e0e0",
              "400": "#bdbdbd",
              "50": "#fafafa",
              "500": "#9e9e9e",
              "600": "#757575",
              "700": "#616161",
              "800": "#424242",
              "900": "#212121",
              "A100": "#d5d5d5",
              "A200": "#aaaaaa",
              "A400": "#303030",
              "A700": "#616161",
            },
            "primary": Object {
              "contrastText": "#fff",
              "dark": "#303f9f",
              "light": "#7986cb",
              "main": "#3f51b5",
            },
            "secondary": Object {
              "contrastText": "#fff",
              "dark": "#c51162",
              "light": "#ff4081",
              "main": "#f50057",
            },
            "text": Object {
              "disabled": "rgba(0, 0, 0, 0.38)",
              "hint": "rgba(0, 0, 0, 0.38)",
              "primary": "rgba(0, 0, 0, 0.87)",
              "secondary": "rgba(0, 0, 0, 0.54)",
            },
            "tonalOffset": 0.2,
            "type": "light",
          },
          "props": Object {},
          "shadows": Array [
            "none",
            "0px 1px 3px 0px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 2px 1px -1px rgba(0, 0, 0, 0.12)",
            "0px 1px 5px 0px rgba(0, 0, 0, 0.2),0px 2px 2px 0px rgba(0, 0, 0, 0.14),0px 3px 1px -2px rgba(0, 0, 0, 0.12)",
            "0px 1px 8px 0px rgba(0, 0, 0, 0.2),0px 3px 4px 0px rgba(0, 0, 0, 0.14),0px 3px 3px -2px rgba(0, 0, 0, 0.12)",
            "0px 2px 4px -1px rgba(0, 0, 0, 0.2),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 1px 10px 0px rgba(0, 0, 0, 0.12)",
            "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12)",
            "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12)",
            "0px 4px 5px -2px rgba(0, 0, 0, 0.2),0px 7px 10px 1px rgba(0, 0, 0, 0.14),0px 2px 16px 1px rgba(0, 0, 0, 0.12)",
            "0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12)",
            "0px 5px 6px -3px rgba(0, 0, 0, 0.2),0px 9px 12px 1px rgba(0, 0, 0, 0.14),0px 3px 16px 2px rgba(0, 0, 0, 0.12)",
            "0px 6px 6px -3px rgba(0, 0, 0, 0.2),0px 10px 14px 1px rgba(0, 0, 0, 0.14),0px 4px 18px 3px rgba(0, 0, 0, 0.12)",
            "0px 6px 7px -4px rgba(0, 0, 0, 0.2),0px 11px 15px 1px rgba(0, 0, 0, 0.14),0px 4px 20px 3px rgba(0, 0, 0, 0.12)",
            "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 12px 17px 2px rgba(0, 0, 0, 0.14),0px 5px 22px 4px rgba(0, 0, 0, 0.12)",
            "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 13px 19px 2px rgba(0, 0, 0, 0.14),0px 5px 24px 4px rgba(0, 0, 0, 0.12)",
            "0px 7px 9px -4px rgba(0, 0, 0, 0.2),0px 14px 21px 2px rgba(0, 0, 0, 0.14),0px 5px 26px 4px rgba(0, 0, 0, 0.12)",
            "0px 8px 9px -5px rgba(0, 0, 0, 0.2),0px 15px 22px 2px rgba(0, 0, 0, 0.14),0px 6px 28px 5px rgba(0, 0, 0, 0.12)",
            "0px 8px 10px -5px rgba(0, 0, 0, 0.2),0px 16px 24px 2px rgba(0, 0, 0, 0.14),0px 6px 30px 5px rgba(0, 0, 0, 0.12)",
            "0px 8px 11px -5px rgba(0, 0, 0, 0.2),0px 17px 26px 2px rgba(0, 0, 0, 0.14),0px 6px 32px 5px rgba(0, 0, 0, 0.12)",
            "0px 9px 11px -5px rgba(0, 0, 0, 0.2),0px 18px 28px 2px rgba(0, 0, 0, 0.14),0px 7px 34px 6px rgba(0, 0, 0, 0.12)",
            "0px 9px 12px -6px rgba(0, 0, 0, 0.2),0px 19px 29px 2px rgba(0, 0, 0, 0.14),0px 7px 36px 6px rgba(0, 0, 0, 0.12)",
            "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 20px 31px 3px rgba(0, 0, 0, 0.14),0px 8px 38px 7px rgba(0, 0, 0, 0.12)",
            "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 21px 33px 3px rgba(0, 0, 0, 0.14),0px 8px 40px 7px rgba(0, 0, 0, 0.12)",
            "0px 10px 14px -6px rgba(0, 0, 0, 0.2),0px 22px 35px 3px rgba(0, 0, 0, 0.14),0px 8px 42px 7px rgba(0, 0, 0, 0.12)",
            "0px 11px 14px -7px rgba(0, 0, 0, 0.2),0px 23px 36px 3px rgba(0, 0, 0, 0.14),0px 9px 44px 8px rgba(0, 0, 0, 0.12)",
            "0px 11px 15px -7px rgba(0, 0, 0, 0.2),0px 24px 38px 3px rgba(0, 0, 0, 0.14),0px 9px 46px 8px rgba(0, 0, 0, 0.12)",
          ],
          "spacing": Object {
            "unit": 8,
          },
          "transitions": Object {
            "create": [Function],
            "duration": Object {
              "complex": 375,
              "enteringScreen": 225,
              "leavingScreen": 195,
              "short": 250,
              "shorter": 200,
              "shortest": 150,
              "standard": 300,
            },
            "easing": Object {
              "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
              "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
              "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
              "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
            },
            "getAutoHeightDuration": [Function],
          },
          "typography": Object {
            "body1": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.875rem",
              "fontWeight": 400,
              "lineHeight": "1.46429em",
            },
            "body2": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.875rem",
              "fontWeight": 500,
              "lineHeight": "1.71429em",
            },
            "button": Object {
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.875rem",
              "fontWeight": 500,
              "textTransform": "uppercase",
            },
            "caption": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.75rem",
              "fontWeight": 400,
              "lineHeight": "1.375em",
            },
            "display1": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "2.125rem",
              "fontWeight": 400,
              "lineHeight": "1.20588em",
            },
            "display2": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "2.8125rem",
              "fontWeight": 400,
              "lineHeight": "1.06667em",
              "marginLeft": "-.02em",
            },
            "display3": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "3.5rem",
              "fontWeight": 400,
              "letterSpacing": "-.02em",
              "lineHeight": "1.30357em",
              "marginLeft": "-.02em",
            },
            "display4": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "7rem",
              "fontWeight": 300,
              "letterSpacing": "-.04em",
              "lineHeight": "1.14286em",
              "marginLeft": "-.04em",
            },
            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
            "fontSize": 14,
            "fontWeightLight": 300,
            "fontWeightMedium": 500,
            "fontWeightRegular": 400,
            "headline": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "1.5rem",
              "fontWeight": 400,
              "lineHeight": "1.35417em",
            },
            "pxToRem": [Function],
            "round": [Function],
            "subheading": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 400,
              "lineHeight": "1.5em",
            },
            "title": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "1.3125rem",
              "fontWeight": 500,
              "lineHeight": "1.16667em",
            },
          },
          "zIndex": Object {
            "appBar": 1100,
            "drawer": 1200,
            "mobileStepper": 1000,
            "modal": 1300,
            "snackbar": 1400,
            "tooltip": 1500,
          },
        }
      }
      title="form button"
    >
      <EventListener
        onResize={[Function]}
        target="window"
      >
        <Manager
          className="MuiTooltip-root-1"
          tag="div"
        >
          <div
            className="MuiTooltip-root-1"
          >
            <Target>
              <RefHolder>
                <WithStyles(Typography)
                  aria-describedby="tooltip-icon"
                  component="div"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  style={Object {}}
                >
                  <Typography
                    align="inherit"
                    aria-describedby="tooltip-icon"
                    classes={
                      Object {
                        "alignCenter": "MuiTypography-alignCenter-23",
                        "alignJustify": "MuiTypography-alignJustify-25",
                        "alignLeft": "MuiTypography-alignLeft-22",
                        "alignRight": "MuiTypography-alignRight-24",
                        "body1": "MuiTypography-body1-19",
                        "body2": "MuiTypography-body2-18",
                        "button": "MuiTypography-button-21",
                        "caption": "MuiTypography-caption-20",
                        "colorError": "MuiTypography-colorError-33",
                        "colorInherit": "MuiTypography-colorInherit-29",
                        "colorPrimary": "MuiTypography-colorPrimary-30",
                        "colorSecondary": "MuiTypography-colorSecondary-31",
                        "colorTextSecondary": "MuiTypography-colorTextSecondary-32",
                        "display1": "MuiTypography-display1-14",
                        "display2": "MuiTypography-display2-13",
                        "display3": "MuiTypography-display3-12",
                        "display4": "MuiTypography-display4-11",
                        "gutterBottom": "MuiTypography-gutterBottom-27",
                        "headline": "MuiTypography-headline-15",
                        "noWrap": "MuiTypography-noWrap-26",
                        "paragraph": "MuiTypography-paragraph-28",
                        "root": "MuiTypography-root-10",
                        "subheading": "MuiTypography-subheading-17",
                        "title": "MuiTypography-title-16",
                      }
                    }
                    color="default"
                    component="div"
                    gutterBottom={false}
                    headlineMapping={
                      Object {
                        "body1": "p",
                        "body2": "aside",
                        "display1": "h1",
                        "display2": "h1",
                        "display3": "h1",
                        "display4": "h1",
                        "headline": "h1",
                        "subheading": "h3",
                        "title": "h2",
                      }
                    }
                    noWrap={false}
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    onTouchStart={[Function]}
                    paragraph={false}
                    style={Object {}}
                    variant="body1"
                  >
                    <div
                      aria-describedby="tooltip-icon"
                      className="MuiTypography-root-10 MuiTypography-body1-19"
                      onBlur={[Function]}
                      onFocus={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      onTouchStart={[Function]}
                      style={Object {}}
                    >
                      <WithStyles(Button)
                        className=""
                        color="primary"
                        disabled={false}
                        form="test form"
                        size="medium"
                        style={Object {}}
                        type="submit"
                        variant="raised"
                      >
                        <Button
                          className=""
                          classes={
                            Object {
                              "colorInherit": "MuiButton-colorInherit-38",
                              "disabled": "MuiButton-disabled-43",
                              "fab": "MuiButton-fab-44",
                              "flatPrimary": "MuiButton-flatPrimary-36",
                              "flatSecondary": "MuiButton-flatSecondary-37",
                              "fullWidth": "MuiButton-fullWidth-48",
                              "keyboardFocused": "MuiButton-keyboardFocused-40",
                              "label": "MuiButton-label-35",
                              "mini": "MuiButton-mini-45",
                              "raised": "MuiButton-raised-39",
                              "raisedPrimary": "MuiButton-raisedPrimary-41",
                              "raisedSecondary": "MuiButton-raisedSecondary-42",
                              "root": "MuiButton-root-34",
                              "sizeLarge": "MuiButton-sizeLarge-47",
                              "sizeSmall": "MuiButton-sizeSmall-46",
                            }
                          }
                          color="primary"
                          disableFocusRipple={false}
                          disabled={false}
                          form="test form"
                          fullWidth={false}
                          mini={false}
                          size="medium"
                          style={Object {}}
                          type="submit"
                          variant="raised"
                        >
                          <WithStyles(ButtonBase)
                            className="MuiButton-root-34 MuiButton-raised-39 MuiButton-raisedPrimary-41"
                            classes={
                              Object {
                                "keyboardFocused": "MuiButton-keyboardFocused-40",
                              }
                            }
                            disabled={false}
                            focusRipple={true}
                            form="test form"
                            style={Object {}}
                            type="submit"
                          >
                            <ButtonBase
                              centerRipple={false}
                              className="MuiButton-root-34 MuiButton-raised-39 MuiButton-raisedPrimary-41"
                              classes={
                                Object {
                                  "disabled": "MuiButtonBase-disabled-50",
                                  "keyboardFocused": "MuiButtonBase-keyboardFocused-51 MuiButton-keyboardFocused-40",
                                  "root": "MuiButtonBase-root-49",
                                }
                              }
                              disableRipple={false}
                              disabled={false}
                              focusRipple={true}
                              form="test form"
                              style={Object {}}
                              tabIndex="0"
                              type="submit"
                            >
                              <button
                                className="MuiButtonBase-root-49 MuiButton-root-34 MuiButton-raised-39 MuiButton-raisedPrimary-41"
                                disabled={false}
                                form="test form"
                                onBlur={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                onKeyUp={[Function]}
                                onMouseDown={[Function]}
                                onMouseLeave={[Function]}
                                onMouseUp={[Function]}
                                onTouchEnd={[Function]}
                                onTouchMove={[Function]}
                                onTouchStart={[Function]}
                                style={Object {}}
                                tabIndex="0"
                                type="submit"
                              >
                                <span
                                  className="MuiButton-label-35"
                                >
                                  form button text
                                </span>
                                <WithStyles(TouchRipple)
                                  center={false}
                                  innerRef={[Function]}
                                >
                                  <TouchRipple
                                    center={false}
                                    classes={
                                      Object {
                                        "child": "MuiTouchRipple-child-56",
                                        "childLeaving": "MuiTouchRipple-childLeaving-57",
                                        "childPulsate": "MuiTouchRipple-childPulsate-58",
                                        "ripple": "MuiTouchRipple-ripple-53",
                                        "ripplePulsate": "MuiTouchRipple-ripplePulsate-55",
                                        "rippleVisible": "MuiTouchRipple-rippleVisible-54",
                                        "root": "MuiTouchRipple-root-52",
                                      }
                                    }
                                  >
                                    <TransitionGroup
                                      childFactory={[Function]}
                                      className="MuiTouchRipple-root-52"
                                      component="span"
                                      enter={true}
                                      exit={true}
                                    >
                                      <span
                                        className="MuiTouchRipple-root-52"
                                      />
                                    </TransitionGroup>
                                  </TouchRipple>
                                </WithStyles(TouchRipple)>
                              </button>
                            </ButtonBase>
                          </WithStyles(ButtonBase)>
                        </Button>
                      </WithStyles(Button)>
                    </div>
                  </Typography>
                </WithStyles(Typography)>
              </RefHolder>
            </Target>
            <Popper
              className="MuiTooltip-popper-2 MuiTooltip-popperClose-3"
              component="div"
              eventsEnabled={false}
              modifiers={Object {}}
              placement="bottom"
            >
              <div
                className="MuiTooltip-popper-2 MuiTooltip-popperClose-3"
                style={
                  Object {
                    "left": 0,
                    "opacity": 0,
                    "pointerEvents": "none",
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                <div
                  aria-hidden={true}
                  className="MuiTooltip-tooltip-4 MuiTooltip-tooltipPlacementBottom-8"
                  id="tooltip-icon"
                  role="tooltip"
                >
                  form button
                </div>
              </div>
            </Popper>
          </div>
        </Manager>
      </EventListener>
    </Tooltip>
  </WithStyles(Tooltip)>
</Btn>
`;

exports[`<Btn /> onClick Btn renders properly 1`] = `
<Btn
  onClick={[MockFunction]}
  text="onClick button text"
  title="onClick button"
>
  <WithStyles(Tooltip)
    id="tooltip-icon"
    title="onClick button"
  >
    <Tooltip
      classes={
        Object {
          "popper": "MuiTooltip-popper-2",
          "popperClose": "MuiTooltip-popperClose-3",
          "root": "MuiTooltip-root-1",
          "tooltip": "MuiTooltip-tooltip-4",
          "tooltipOpen": "MuiTooltip-tooltipOpen-9",
          "tooltipPlacementBottom": "MuiTooltip-tooltipPlacementBottom-8",
          "tooltipPlacementLeft": "MuiTooltip-tooltipPlacementLeft-5",
          "tooltipPlacementRight": "MuiTooltip-tooltipPlacementRight-6",
          "tooltipPlacementTop": "MuiTooltip-tooltipPlacementTop-7",
        }
      }
      disableTriggerFocus={false}
      disableTriggerHover={false}
      disableTriggerTouch={false}
      enterDelay={0}
      enterTouchDelay={1000}
      id="tooltip-icon"
      leaveDelay={0}
      leaveTouchDelay={1500}
      placement="bottom"
      theme={
        Object {
          "breakpoints": Object {
            "between": [Function],
            "down": [Function],
            "keys": Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ],
            "only": [Function],
            "up": [Function],
            "values": Object {
              "lg": 1280,
              "md": 960,
              "sm": 600,
              "xl": 1920,
              "xs": 0,
            },
            "width": [Function],
          },
          "direction": "ltr",
          "mixins": Object {
            "gutters": [Function],
            "toolbar": Object {
              "@media (min-width:0px) and (orientation: landscape)": Object {
                "minHeight": 48,
              },
              "@media (min-width:600px)": Object {
                "minHeight": 64,
              },
              "minHeight": 56,
            },
          },
          "overrides": Object {},
          "palette": Object {
            "action": Object {
              "active": "rgba(0, 0, 0, 0.54)",
              "disabled": "rgba(0, 0, 0, 0.26)",
              "disabledBackground": "rgba(0, 0, 0, 0.12)",
              "hover": "rgba(0, 0, 0, 0.08)",
              "selected": "rgba(0, 0, 0, 0.14)",
            },
            "background": Object {
              "default": "#fafafa",
              "paper": "#fff",
            },
            "common": Object {
              "black": "#000",
              "white": "#fff",
            },
            "contrastThreshold": 3,
            "divider": "rgba(0, 0, 0, 0.12)",
            "error": Object {
              "contrastText": "#fff",
              "dark": "#d32f2f",
              "light": "#e57373",
              "main": "#f44336",
            },
            "getContrastText": [Function],
            "grey": Object {
              "100": "#f5f5f5",
              "200": "#eeeeee",
              "300": "#e0e0e0",
              "400": "#bdbdbd",
              "50": "#fafafa",
              "500": "#9e9e9e",
              "600": "#757575",
              "700": "#616161",
              "800": "#424242",
              "900": "#212121",
              "A100": "#d5d5d5",
              "A200": "#aaaaaa",
              "A400": "#303030",
              "A700": "#616161",
            },
            "primary": Object {
              "contrastText": "#fff",
              "dark": "#303f9f",
              "light": "#7986cb",
              "main": "#3f51b5",
            },
            "secondary": Object {
              "contrastText": "#fff",
              "dark": "#c51162",
              "light": "#ff4081",
              "main": "#f50057",
            },
            "text": Object {
              "disabled": "rgba(0, 0, 0, 0.38)",
              "hint": "rgba(0, 0, 0, 0.38)",
              "primary": "rgba(0, 0, 0, 0.87)",
              "secondary": "rgba(0, 0, 0, 0.54)",
            },
            "tonalOffset": 0.2,
            "type": "light",
          },
          "props": Object {},
          "shadows": Array [
            "none",
            "0px 1px 3px 0px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 2px 1px -1px rgba(0, 0, 0, 0.12)",
            "0px 1px 5px 0px rgba(0, 0, 0, 0.2),0px 2px 2px 0px rgba(0, 0, 0, 0.14),0px 3px 1px -2px rgba(0, 0, 0, 0.12)",
            "0px 1px 8px 0px rgba(0, 0, 0, 0.2),0px 3px 4px 0px rgba(0, 0, 0, 0.14),0px 3px 3px -2px rgba(0, 0, 0, 0.12)",
            "0px 2px 4px -1px rgba(0, 0, 0, 0.2),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 1px 10px 0px rgba(0, 0, 0, 0.12)",
            "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12)",
            "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12)",
            "0px 4px 5px -2px rgba(0, 0, 0, 0.2),0px 7px 10px 1px rgba(0, 0, 0, 0.14),0px 2px 16px 1px rgba(0, 0, 0, 0.12)",
            "0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12)",
            "0px 5px 6px -3px rgba(0, 0, 0, 0.2),0px 9px 12px 1px rgba(0, 0, 0, 0.14),0px 3px 16px 2px rgba(0, 0, 0, 0.12)",
            "0px 6px 6px -3px rgba(0, 0, 0, 0.2),0px 10px 14px 1px rgba(0, 0, 0, 0.14),0px 4px 18px 3px rgba(0, 0, 0, 0.12)",
            "0px 6px 7px -4px rgba(0, 0, 0, 0.2),0px 11px 15px 1px rgba(0, 0, 0, 0.14),0px 4px 20px 3px rgba(0, 0, 0, 0.12)",
            "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 12px 17px 2px rgba(0, 0, 0, 0.14),0px 5px 22px 4px rgba(0, 0, 0, 0.12)",
            "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 13px 19px 2px rgba(0, 0, 0, 0.14),0px 5px 24px 4px rgba(0, 0, 0, 0.12)",
            "0px 7px 9px -4px rgba(0, 0, 0, 0.2),0px 14px 21px 2px rgba(0, 0, 0, 0.14),0px 5px 26px 4px rgba(0, 0, 0, 0.12)",
            "0px 8px 9px -5px rgba(0, 0, 0, 0.2),0px 15px 22px 2px rgba(0, 0, 0, 0.14),0px 6px 28px 5px rgba(0, 0, 0, 0.12)",
            "0px 8px 10px -5px rgba(0, 0, 0, 0.2),0px 16px 24px 2px rgba(0, 0, 0, 0.14),0px 6px 30px 5px rgba(0, 0, 0, 0.12)",
            "0px 8px 11px -5px rgba(0, 0, 0, 0.2),0px 17px 26px 2px rgba(0, 0, 0, 0.14),0px 6px 32px 5px rgba(0, 0, 0, 0.12)",
            "0px 9px 11px -5px rgba(0, 0, 0, 0.2),0px 18px 28px 2px rgba(0, 0, 0, 0.14),0px 7px 34px 6px rgba(0, 0, 0, 0.12)",
            "0px 9px 12px -6px rgba(0, 0, 0, 0.2),0px 19px 29px 2px rgba(0, 0, 0, 0.14),0px 7px 36px 6px rgba(0, 0, 0, 0.12)",
            "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 20px 31px 3px rgba(0, 0, 0, 0.14),0px 8px 38px 7px rgba(0, 0, 0, 0.12)",
            "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 21px 33px 3px rgba(0, 0, 0, 0.14),0px 8px 40px 7px rgba(0, 0, 0, 0.12)",
            "0px 10px 14px -6px rgba(0, 0, 0, 0.2),0px 22px 35px 3px rgba(0, 0, 0, 0.14),0px 8px 42px 7px rgba(0, 0, 0, 0.12)",
            "0px 11px 14px -7px rgba(0, 0, 0, 0.2),0px 23px 36px 3px rgba(0, 0, 0, 0.14),0px 9px 44px 8px rgba(0, 0, 0, 0.12)",
            "0px 11px 15px -7px rgba(0, 0, 0, 0.2),0px 24px 38px 3px rgba(0, 0, 0, 0.14),0px 9px 46px 8px rgba(0, 0, 0, 0.12)",
          ],
          "spacing": Object {
            "unit": 8,
          },
          "transitions": Object {
            "create": [Function],
            "duration": Object {
              "complex": 375,
              "enteringScreen": 225,
              "leavingScreen": 195,
              "short": 250,
              "shorter": 200,
              "shortest": 150,
              "standard": 300,
            },
            "easing": Object {
              "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
              "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
              "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
              "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
            },
            "getAutoHeightDuration": [Function],
          },
          "typography": Object {
            "body1": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.875rem",
              "fontWeight": 400,
              "lineHeight": "1.46429em",
            },
            "body2": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.875rem",
              "fontWeight": 500,
              "lineHeight": "1.71429em",
            },
            "button": Object {
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.875rem",
              "fontWeight": 500,
              "textTransform": "uppercase",
            },
            "caption": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.75rem",
              "fontWeight": 400,
              "lineHeight": "1.375em",
            },
            "display1": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "2.125rem",
              "fontWeight": 400,
              "lineHeight": "1.20588em",
            },
            "display2": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "2.8125rem",
              "fontWeight": 400,
              "lineHeight": "1.06667em",
              "marginLeft": "-.02em",
            },
            "display3": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "3.5rem",
              "fontWeight": 400,
              "letterSpacing": "-.02em",
              "lineHeight": "1.30357em",
              "marginLeft": "-.02em",
            },
            "display4": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "7rem",
              "fontWeight": 300,
              "letterSpacing": "-.04em",
              "lineHeight": "1.14286em",
              "marginLeft": "-.04em",
            },
            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
            "fontSize": 14,
            "fontWeightLight": 300,
            "fontWeightMedium": 500,
            "fontWeightRegular": 400,
            "headline": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "1.5rem",
              "fontWeight": 400,
              "lineHeight": "1.35417em",
            },
            "pxToRem": [Function],
            "round": [Function],
            "subheading": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 400,
              "lineHeight": "1.5em",
            },
            "title": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "1.3125rem",
              "fontWeight": 500,
              "lineHeight": "1.16667em",
            },
          },
          "zIndex": Object {
            "appBar": 1100,
            "drawer": 1200,
            "mobileStepper": 1000,
            "modal": 1300,
            "snackbar": 1400,
            "tooltip": 1500,
          },
        }
      }
      title="onClick button"
    >
      <EventListener
        onResize={[Function]}
        target="window"
      >
        <Manager
          className="MuiTooltip-root-1"
          tag="div"
        >
          <div
            className="MuiTooltip-root-1"
          >
            <Target>
              <RefHolder>
                <WithStyles(Typography)
                  aria-describedby="tooltip-icon"
                  component="div"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  style={Object {}}
                >
                  <Typography
                    align="inherit"
                    aria-describedby="tooltip-icon"
                    classes={
                      Object {
                        "alignCenter": "MuiTypography-alignCenter-23",
                        "alignJustify": "MuiTypography-alignJustify-25",
                        "alignLeft": "MuiTypography-alignLeft-22",
                        "alignRight": "MuiTypography-alignRight-24",
                        "body1": "MuiTypography-body1-19",
                        "body2": "MuiTypography-body2-18",
                        "button": "MuiTypography-button-21",
                        "caption": "MuiTypography-caption-20",
                        "colorError": "MuiTypography-colorError-33",
                        "colorInherit": "MuiTypography-colorInherit-29",
                        "colorPrimary": "MuiTypography-colorPrimary-30",
                        "colorSecondary": "MuiTypography-colorSecondary-31",
                        "colorTextSecondary": "MuiTypography-colorTextSecondary-32",
                        "display1": "MuiTypography-display1-14",
                        "display2": "MuiTypography-display2-13",
                        "display3": "MuiTypography-display3-12",
                        "display4": "MuiTypography-display4-11",
                        "gutterBottom": "MuiTypography-gutterBottom-27",
                        "headline": "MuiTypography-headline-15",
                        "noWrap": "MuiTypography-noWrap-26",
                        "paragraph": "MuiTypography-paragraph-28",
                        "root": "MuiTypography-root-10",
                        "subheading": "MuiTypography-subheading-17",
                        "title": "MuiTypography-title-16",
                      }
                    }
                    color="default"
                    component="div"
                    gutterBottom={false}
                    headlineMapping={
                      Object {
                        "body1": "p",
                        "body2": "aside",
                        "display1": "h1",
                        "display2": "h1",
                        "display3": "h1",
                        "display4": "h1",
                        "headline": "h1",
                        "subheading": "h3",
                        "title": "h2",
                      }
                    }
                    noWrap={false}
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    onTouchStart={[Function]}
                    paragraph={false}
                    style={Object {}}
                    variant="body1"
                  >
                    <div
                      aria-describedby="tooltip-icon"
                      className="MuiTypography-root-10 MuiTypography-body1-19"
                      onBlur={[Function]}
                      onFocus={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      onTouchStart={[Function]}
                      style={Object {}}
                    >
                      <WithStyles(Button)
                        className=""
                        color="primary"
                        disabled={false}
                        onClick={[MockFunction]}
                        size="medium"
                        style={Object {}}
                        variant="raised"
                      >
                        <Button
                          className=""
                          classes={
                            Object {
                              "colorInherit": "MuiButton-colorInherit-38",
                              "disabled": "MuiButton-disabled-43",
                              "fab": "MuiButton-fab-44",
                              "flatPrimary": "MuiButton-flatPrimary-36",
                              "flatSecondary": "MuiButton-flatSecondary-37",
                              "fullWidth": "MuiButton-fullWidth-48",
                              "keyboardFocused": "MuiButton-keyboardFocused-40",
                              "label": "MuiButton-label-35",
                              "mini": "MuiButton-mini-45",
                              "raised": "MuiButton-raised-39",
                              "raisedPrimary": "MuiButton-raisedPrimary-41",
                              "raisedSecondary": "MuiButton-raisedSecondary-42",
                              "root": "MuiButton-root-34",
                              "sizeLarge": "MuiButton-sizeLarge-47",
                              "sizeSmall": "MuiButton-sizeSmall-46",
                            }
                          }
                          color="primary"
                          disableFocusRipple={false}
                          disabled={false}
                          fullWidth={false}
                          mini={false}
                          onClick={[MockFunction]}
                          size="medium"
                          style={Object {}}
                          type="button"
                          variant="raised"
                        >
                          <WithStyles(ButtonBase)
                            className="MuiButton-root-34 MuiButton-raised-39 MuiButton-raisedPrimary-41"
                            classes={
                              Object {
                                "keyboardFocused": "MuiButton-keyboardFocused-40",
                              }
                            }
                            disabled={false}
                            focusRipple={true}
                            onClick={[MockFunction]}
                            style={Object {}}
                            type="button"
                          >
                            <ButtonBase
                              centerRipple={false}
                              className="MuiButton-root-34 MuiButton-raised-39 MuiButton-raisedPrimary-41"
                              classes={
                                Object {
                                  "disabled": "MuiButtonBase-disabled-50",
                                  "keyboardFocused": "MuiButtonBase-keyboardFocused-51 MuiButton-keyboardFocused-40",
                                  "root": "MuiButtonBase-root-49",
                                }
                              }
                              disableRipple={false}
                              disabled={false}
                              focusRipple={true}
                              onClick={[MockFunction]}
                              style={Object {}}
                              tabIndex="0"
                              type="button"
                            >
                              <button
                                className="MuiButtonBase-root-49 MuiButton-root-34 MuiButton-raised-39 MuiButton-raisedPrimary-41"
                                disabled={false}
                                onBlur={[Function]}
                                onClick={[MockFunction]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                onKeyUp={[Function]}
                                onMouseDown={[Function]}
                                onMouseLeave={[Function]}
                                onMouseUp={[Function]}
                                onTouchEnd={[Function]}
                                onTouchMove={[Function]}
                                onTouchStart={[Function]}
                                style={Object {}}
                                tabIndex="0"
                                type="button"
                              >
                                <span
                                  className="MuiButton-label-35"
                                >
                                  onClick button text
                                </span>
                                <WithStyles(TouchRipple)
                                  center={false}
                                  innerRef={[Function]}
                                >
                                  <TouchRipple
                                    center={false}
                                    classes={
                                      Object {
                                        "child": "MuiTouchRipple-child-56",
                                        "childLeaving": "MuiTouchRipple-childLeaving-57",
                                        "childPulsate": "MuiTouchRipple-childPulsate-58",
                                        "ripple": "MuiTouchRipple-ripple-53",
                                        "ripplePulsate": "MuiTouchRipple-ripplePulsate-55",
                                        "rippleVisible": "MuiTouchRipple-rippleVisible-54",
                                        "root": "MuiTouchRipple-root-52",
                                      }
                                    }
                                  >
                                    <TransitionGroup
                                      childFactory={[Function]}
                                      className="MuiTouchRipple-root-52"
                                      component="span"
                                      enter={true}
                                      exit={true}
                                    >
                                      <span
                                        className="MuiTouchRipple-root-52"
                                      />
                                    </TransitionGroup>
                                  </TouchRipple>
                                </WithStyles(TouchRipple)>
                              </button>
                            </ButtonBase>
                          </WithStyles(ButtonBase)>
                        </Button>
                      </WithStyles(Button)>
                    </div>
                  </Typography>
                </WithStyles(Typography)>
              </RefHolder>
            </Target>
            <Popper
              className="MuiTooltip-popper-2 MuiTooltip-popperClose-3"
              component="div"
              eventsEnabled={false}
              modifiers={Object {}}
              placement="bottom"
            >
              <div
                className="MuiTooltip-popper-2 MuiTooltip-popperClose-3"
                style={
                  Object {
                    "left": 0,
                    "opacity": 0,
                    "pointerEvents": "none",
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                <div
                  aria-hidden={true}
                  className="MuiTooltip-tooltip-4 MuiTooltip-tooltipPlacementBottom-8"
                  id="tooltip-icon"
                  role="tooltip"
                >
                  onClick button
                </div>
              </div>
            </Popper>
          </div>
        </Manager>
      </EventListener>
    </Tooltip>
  </WithStyles(Tooltip)>
</Btn>
`;

exports[`<Btn /> to Btn renders properly 1`] = `
<Btn
  text="to button text"
  title="to button"
  to="/somewhere"
>
  <WithStyles(Tooltip)
    id="tooltip-icon"
    title="to button"
  >
    <Tooltip
      classes={
        Object {
          "popper": "MuiTooltip-popper-2",
          "popperClose": "MuiTooltip-popperClose-3",
          "root": "MuiTooltip-root-1",
          "tooltip": "MuiTooltip-tooltip-4",
          "tooltipOpen": "MuiTooltip-tooltipOpen-9",
          "tooltipPlacementBottom": "MuiTooltip-tooltipPlacementBottom-8",
          "tooltipPlacementLeft": "MuiTooltip-tooltipPlacementLeft-5",
          "tooltipPlacementRight": "MuiTooltip-tooltipPlacementRight-6",
          "tooltipPlacementTop": "MuiTooltip-tooltipPlacementTop-7",
        }
      }
      disableTriggerFocus={false}
      disableTriggerHover={false}
      disableTriggerTouch={false}
      enterDelay={0}
      enterTouchDelay={1000}
      id="tooltip-icon"
      leaveDelay={0}
      leaveTouchDelay={1500}
      placement="bottom"
      theme={
        Object {
          "breakpoints": Object {
            "between": [Function],
            "down": [Function],
            "keys": Array [
              "xs",
              "sm",
              "md",
              "lg",
              "xl",
            ],
            "only": [Function],
            "up": [Function],
            "values": Object {
              "lg": 1280,
              "md": 960,
              "sm": 600,
              "xl": 1920,
              "xs": 0,
            },
            "width": [Function],
          },
          "direction": "ltr",
          "mixins": Object {
            "gutters": [Function],
            "toolbar": Object {
              "@media (min-width:0px) and (orientation: landscape)": Object {
                "minHeight": 48,
              },
              "@media (min-width:600px)": Object {
                "minHeight": 64,
              },
              "minHeight": 56,
            },
          },
          "overrides": Object {},
          "palette": Object {
            "action": Object {
              "active": "rgba(0, 0, 0, 0.54)",
              "disabled": "rgba(0, 0, 0, 0.26)",
              "disabledBackground": "rgba(0, 0, 0, 0.12)",
              "hover": "rgba(0, 0, 0, 0.08)",
              "selected": "rgba(0, 0, 0, 0.14)",
            },
            "background": Object {
              "default": "#fafafa",
              "paper": "#fff",
            },
            "common": Object {
              "black": "#000",
              "white": "#fff",
            },
            "contrastThreshold": 3,
            "divider": "rgba(0, 0, 0, 0.12)",
            "error": Object {
              "contrastText": "#fff",
              "dark": "#d32f2f",
              "light": "#e57373",
              "main": "#f44336",
            },
            "getContrastText": [Function],
            "grey": Object {
              "100": "#f5f5f5",
              "200": "#eeeeee",
              "300": "#e0e0e0",
              "400": "#bdbdbd",
              "50": "#fafafa",
              "500": "#9e9e9e",
              "600": "#757575",
              "700": "#616161",
              "800": "#424242",
              "900": "#212121",
              "A100": "#d5d5d5",
              "A200": "#aaaaaa",
              "A400": "#303030",
              "A700": "#616161",
            },
            "primary": Object {
              "contrastText": "#fff",
              "dark": "#303f9f",
              "light": "#7986cb",
              "main": "#3f51b5",
            },
            "secondary": Object {
              "contrastText": "#fff",
              "dark": "#c51162",
              "light": "#ff4081",
              "main": "#f50057",
            },
            "text": Object {
              "disabled": "rgba(0, 0, 0, 0.38)",
              "hint": "rgba(0, 0, 0, 0.38)",
              "primary": "rgba(0, 0, 0, 0.87)",
              "secondary": "rgba(0, 0, 0, 0.54)",
            },
            "tonalOffset": 0.2,
            "type": "light",
          },
          "props": Object {},
          "shadows": Array [
            "none",
            "0px 1px 3px 0px rgba(0, 0, 0, 0.2),0px 1px 1px 0px rgba(0, 0, 0, 0.14),0px 2px 1px -1px rgba(0, 0, 0, 0.12)",
            "0px 1px 5px 0px rgba(0, 0, 0, 0.2),0px 2px 2px 0px rgba(0, 0, 0, 0.14),0px 3px 1px -2px rgba(0, 0, 0, 0.12)",
            "0px 1px 8px 0px rgba(0, 0, 0, 0.2),0px 3px 4px 0px rgba(0, 0, 0, 0.14),0px 3px 3px -2px rgba(0, 0, 0, 0.12)",
            "0px 2px 4px -1px rgba(0, 0, 0, 0.2),0px 4px 5px 0px rgba(0, 0, 0, 0.14),0px 1px 10px 0px rgba(0, 0, 0, 0.12)",
            "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 5px 8px 0px rgba(0, 0, 0, 0.14),0px 1px 14px 0px rgba(0, 0, 0, 0.12)",
            "0px 3px 5px -1px rgba(0, 0, 0, 0.2),0px 6px 10px 0px rgba(0, 0, 0, 0.14),0px 1px 18px 0px rgba(0, 0, 0, 0.12)",
            "0px 4px 5px -2px rgba(0, 0, 0, 0.2),0px 7px 10px 1px rgba(0, 0, 0, 0.14),0px 2px 16px 1px rgba(0, 0, 0, 0.12)",
            "0px 5px 5px -3px rgba(0, 0, 0, 0.2),0px 8px 10px 1px rgba(0, 0, 0, 0.14),0px 3px 14px 2px rgba(0, 0, 0, 0.12)",
            "0px 5px 6px -3px rgba(0, 0, 0, 0.2),0px 9px 12px 1px rgba(0, 0, 0, 0.14),0px 3px 16px 2px rgba(0, 0, 0, 0.12)",
            "0px 6px 6px -3px rgba(0, 0, 0, 0.2),0px 10px 14px 1px rgba(0, 0, 0, 0.14),0px 4px 18px 3px rgba(0, 0, 0, 0.12)",
            "0px 6px 7px -4px rgba(0, 0, 0, 0.2),0px 11px 15px 1px rgba(0, 0, 0, 0.14),0px 4px 20px 3px rgba(0, 0, 0, 0.12)",
            "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 12px 17px 2px rgba(0, 0, 0, 0.14),0px 5px 22px 4px rgba(0, 0, 0, 0.12)",
            "0px 7px 8px -4px rgba(0, 0, 0, 0.2),0px 13px 19px 2px rgba(0, 0, 0, 0.14),0px 5px 24px 4px rgba(0, 0, 0, 0.12)",
            "0px 7px 9px -4px rgba(0, 0, 0, 0.2),0px 14px 21px 2px rgba(0, 0, 0, 0.14),0px 5px 26px 4px rgba(0, 0, 0, 0.12)",
            "0px 8px 9px -5px rgba(0, 0, 0, 0.2),0px 15px 22px 2px rgba(0, 0, 0, 0.14),0px 6px 28px 5px rgba(0, 0, 0, 0.12)",
            "0px 8px 10px -5px rgba(0, 0, 0, 0.2),0px 16px 24px 2px rgba(0, 0, 0, 0.14),0px 6px 30px 5px rgba(0, 0, 0, 0.12)",
            "0px 8px 11px -5px rgba(0, 0, 0, 0.2),0px 17px 26px 2px rgba(0, 0, 0, 0.14),0px 6px 32px 5px rgba(0, 0, 0, 0.12)",
            "0px 9px 11px -5px rgba(0, 0, 0, 0.2),0px 18px 28px 2px rgba(0, 0, 0, 0.14),0px 7px 34px 6px rgba(0, 0, 0, 0.12)",
            "0px 9px 12px -6px rgba(0, 0, 0, 0.2),0px 19px 29px 2px rgba(0, 0, 0, 0.14),0px 7px 36px 6px rgba(0, 0, 0, 0.12)",
            "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 20px 31px 3px rgba(0, 0, 0, 0.14),0px 8px 38px 7px rgba(0, 0, 0, 0.12)",
            "0px 10px 13px -6px rgba(0, 0, 0, 0.2),0px 21px 33px 3px rgba(0, 0, 0, 0.14),0px 8px 40px 7px rgba(0, 0, 0, 0.12)",
            "0px 10px 14px -6px rgba(0, 0, 0, 0.2),0px 22px 35px 3px rgba(0, 0, 0, 0.14),0px 8px 42px 7px rgba(0, 0, 0, 0.12)",
            "0px 11px 14px -7px rgba(0, 0, 0, 0.2),0px 23px 36px 3px rgba(0, 0, 0, 0.14),0px 9px 44px 8px rgba(0, 0, 0, 0.12)",
            "0px 11px 15px -7px rgba(0, 0, 0, 0.2),0px 24px 38px 3px rgba(0, 0, 0, 0.14),0px 9px 46px 8px rgba(0, 0, 0, 0.12)",
          ],
          "spacing": Object {
            "unit": 8,
          },
          "transitions": Object {
            "create": [Function],
            "duration": Object {
              "complex": 375,
              "enteringScreen": 225,
              "leavingScreen": 195,
              "short": 250,
              "shorter": 200,
              "shortest": 150,
              "standard": 300,
            },
            "easing": Object {
              "easeIn": "cubic-bezier(0.4, 0, 1, 1)",
              "easeInOut": "cubic-bezier(0.4, 0, 0.2, 1)",
              "easeOut": "cubic-bezier(0.0, 0, 0.2, 1)",
              "sharp": "cubic-bezier(0.4, 0, 0.6, 1)",
            },
            "getAutoHeightDuration": [Function],
          },
          "typography": Object {
            "body1": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.875rem",
              "fontWeight": 400,
              "lineHeight": "1.46429em",
            },
            "body2": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.875rem",
              "fontWeight": 500,
              "lineHeight": "1.71429em",
            },
            "button": Object {
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.875rem",
              "fontWeight": 500,
              "textTransform": "uppercase",
            },
            "caption": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "0.75rem",
              "fontWeight": 400,
              "lineHeight": "1.375em",
            },
            "display1": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "2.125rem",
              "fontWeight": 400,
              "lineHeight": "1.20588em",
            },
            "display2": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "2.8125rem",
              "fontWeight": 400,
              "lineHeight": "1.06667em",
              "marginLeft": "-.02em",
            },
            "display3": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "3.5rem",
              "fontWeight": 400,
              "letterSpacing": "-.02em",
              "lineHeight": "1.30357em",
              "marginLeft": "-.02em",
            },
            "display4": Object {
              "color": "rgba(0, 0, 0, 0.54)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "7rem",
              "fontWeight": 300,
              "letterSpacing": "-.04em",
              "lineHeight": "1.14286em",
              "marginLeft": "-.04em",
            },
            "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
            "fontSize": 14,
            "fontWeightLight": 300,
            "fontWeightMedium": 500,
            "fontWeightRegular": 400,
            "headline": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "1.5rem",
              "fontWeight": 400,
              "lineHeight": "1.35417em",
            },
            "pxToRem": [Function],
            "round": [Function],
            "subheading": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "1rem",
              "fontWeight": 400,
              "lineHeight": "1.5em",
            },
            "title": Object {
              "color": "rgba(0, 0, 0, 0.87)",
              "fontFamily": "\\"Roboto\\", \\"Helvetica\\", \\"Arial\\", sans-serif",
              "fontSize": "1.3125rem",
              "fontWeight": 500,
              "lineHeight": "1.16667em",
            },
          },
          "zIndex": Object {
            "appBar": 1100,
            "drawer": 1200,
            "mobileStepper": 1000,
            "modal": 1300,
            "snackbar": 1400,
            "tooltip": 1500,
          },
        }
      }
      title="to button"
    >
      <EventListener
        onResize={[Function]}
        target="window"
      >
        <Manager
          className="MuiTooltip-root-1"
          tag="div"
        >
          <div
            className="MuiTooltip-root-1"
          >
            <Target>
              <RefHolder>
                <WithStyles(Typography)
                  aria-describedby="tooltip-icon"
                  component="div"
                  onBlur={[Function]}
                  onFocus={[Function]}
                  onMouseLeave={[Function]}
                  onMouseOver={[Function]}
                  onTouchEnd={[Function]}
                  onTouchStart={[Function]}
                  style={Object {}}
                >
                  <Typography
                    align="inherit"
                    aria-describedby="tooltip-icon"
                    classes={
                      Object {
                        "alignCenter": "MuiTypography-alignCenter-23",
                        "alignJustify": "MuiTypography-alignJustify-25",
                        "alignLeft": "MuiTypography-alignLeft-22",
                        "alignRight": "MuiTypography-alignRight-24",
                        "body1": "MuiTypography-body1-19",
                        "body2": "MuiTypography-body2-18",
                        "button": "MuiTypography-button-21",
                        "caption": "MuiTypography-caption-20",
                        "colorError": "MuiTypography-colorError-33",
                        "colorInherit": "MuiTypography-colorInherit-29",
                        "colorPrimary": "MuiTypography-colorPrimary-30",
                        "colorSecondary": "MuiTypography-colorSecondary-31",
                        "colorTextSecondary": "MuiTypography-colorTextSecondary-32",
                        "display1": "MuiTypography-display1-14",
                        "display2": "MuiTypography-display2-13",
                        "display3": "MuiTypography-display3-12",
                        "display4": "MuiTypography-display4-11",
                        "gutterBottom": "MuiTypography-gutterBottom-27",
                        "headline": "MuiTypography-headline-15",
                        "noWrap": "MuiTypography-noWrap-26",
                        "paragraph": "MuiTypography-paragraph-28",
                        "root": "MuiTypography-root-10",
                        "subheading": "MuiTypography-subheading-17",
                        "title": "MuiTypography-title-16",
                      }
                    }
                    color="default"
                    component="div"
                    gutterBottom={false}
                    headlineMapping={
                      Object {
                        "body1": "p",
                        "body2": "aside",
                        "display1": "h1",
                        "display2": "h1",
                        "display3": "h1",
                        "display4": "h1",
                        "headline": "h1",
                        "subheading": "h3",
                        "title": "h2",
                      }
                    }
                    noWrap={false}
                    onBlur={[Function]}
                    onFocus={[Function]}
                    onMouseLeave={[Function]}
                    onMouseOver={[Function]}
                    onTouchEnd={[Function]}
                    onTouchStart={[Function]}
                    paragraph={false}
                    style={Object {}}
                    variant="body1"
                  >
                    <div
                      aria-describedby="tooltip-icon"
                      className="MuiTypography-root-10 MuiTypography-body1-19"
                      onBlur={[Function]}
                      onFocus={[Function]}
                      onMouseLeave={[Function]}
                      onMouseOver={[Function]}
                      onTouchEnd={[Function]}
                      onTouchStart={[Function]}
                      style={Object {}}
                    >
                      <WithStyles(Button)
                        className=" raised"
                        color="primary"
                        component={[Function]}
                        disabled={false}
                        size="medium"
                        style={Object {}}
                        to="/somewhere"
                        variant="raised"
                      >
                        <Button
                          className=" raised"
                          classes={
                            Object {
                              "colorInherit": "MuiButton-colorInherit-38",
                              "disabled": "MuiButton-disabled-43",
                              "fab": "MuiButton-fab-44",
                              "flatPrimary": "MuiButton-flatPrimary-36",
                              "flatSecondary": "MuiButton-flatSecondary-37",
                              "fullWidth": "MuiButton-fullWidth-48",
                              "keyboardFocused": "MuiButton-keyboardFocused-40",
                              "label": "MuiButton-label-35",
                              "mini": "MuiButton-mini-45",
                              "raised": "MuiButton-raised-39",
                              "raisedPrimary": "MuiButton-raisedPrimary-41",
                              "raisedSecondary": "MuiButton-raisedSecondary-42",
                              "root": "MuiButton-root-34",
                              "sizeLarge": "MuiButton-sizeLarge-47",
                              "sizeSmall": "MuiButton-sizeSmall-46",
                            }
                          }
                          color="primary"
                          component={[Function]}
                          disableFocusRipple={false}
                          disabled={false}
                          fullWidth={false}
                          mini={false}
                          size="medium"
                          style={Object {}}
                          to="/somewhere"
                          type="button"
                          variant="raised"
                        >
                          <WithStyles(ButtonBase)
                            className="MuiButton-root-34 MuiButton-raised-39 MuiButton-raisedPrimary-41  raised"
                            classes={
                              Object {
                                "keyboardFocused": "MuiButton-keyboardFocused-40",
                              }
                            }
                            component={[Function]}
                            disabled={false}
                            focusRipple={true}
                            style={Object {}}
                            to="/somewhere"
                            type="button"
                          >
                            <ButtonBase
                              centerRipple={false}
                              className="MuiButton-root-34 MuiButton-raised-39 MuiButton-raisedPrimary-41  raised"
                              classes={
                                Object {
                                  "disabled": "MuiButtonBase-disabled-50",
                                  "keyboardFocused": "MuiButtonBase-keyboardFocused-51 MuiButton-keyboardFocused-40",
                                  "root": "MuiButtonBase-root-49",
                                }
                              }
                              component={[Function]}
                              disableRipple={false}
                              disabled={false}
                              focusRipple={true}
                              style={Object {}}
                              tabIndex="0"
                              to="/somewhere"
                              type="button"
                            >
                              <Link
                                className="MuiButtonBase-root-49 MuiButton-root-34 MuiButton-raised-39 MuiButton-raisedPrimary-41  raised"
                                onBlur={[Function]}
                                onFocus={[Function]}
                                onKeyDown={[Function]}
                                onKeyUp={[Function]}
                                onMouseDown={[Function]}
                                onMouseLeave={[Function]}
                                onMouseUp={[Function]}
                                onTouchEnd={[Function]}
                                onTouchMove={[Function]}
                                onTouchStart={[Function]}
                                replace={false}
                                role="button"
                                style={Object {}}
                                tabIndex="0"
                                to="/somewhere"
                              >
                                <a
                                  className="MuiButtonBase-root-49 MuiButton-root-34 MuiButton-raised-39 MuiButton-raisedPrimary-41  raised"
                                  href="/somewhere"
                                  onBlur={[Function]}
                                  onClick={[Function]}
                                  onFocus={[Function]}
                                  onKeyDown={[Function]}
                                  onKeyUp={[Function]}
                                  onMouseDown={[Function]}
                                  onMouseLeave={[Function]}
                                  onMouseUp={[Function]}
                                  onTouchEnd={[Function]}
                                  onTouchMove={[Function]}
                                  onTouchStart={[Function]}
                                  role="button"
                                  style={Object {}}
                                  tabIndex="0"
                                >
                                  <span
                                    className="MuiButton-label-35"
                                  >
                                    to button text
                                  </span>
                                  <WithStyles(TouchRipple)
                                    center={false}
                                    innerRef={[Function]}
                                  >
                                    <TouchRipple
                                      center={false}
                                      classes={
                                        Object {
                                          "child": "MuiTouchRipple-child-56",
                                          "childLeaving": "MuiTouchRipple-childLeaving-57",
                                          "childPulsate": "MuiTouchRipple-childPulsate-58",
                                          "ripple": "MuiTouchRipple-ripple-53",
                                          "ripplePulsate": "MuiTouchRipple-ripplePulsate-55",
                                          "rippleVisible": "MuiTouchRipple-rippleVisible-54",
                                          "root": "MuiTouchRipple-root-52",
                                        }
                                      }
                                    >
                                      <TransitionGroup
                                        childFactory={[Function]}
                                        className="MuiTouchRipple-root-52"
                                        component="span"
                                        enter={true}
                                        exit={true}
                                      >
                                        <span
                                          className="MuiTouchRipple-root-52"
                                        />
                                      </TransitionGroup>
                                    </TouchRipple>
                                  </WithStyles(TouchRipple)>
                                </a>
                              </Link>
                            </ButtonBase>
                          </WithStyles(ButtonBase)>
                        </Button>
                      </WithStyles(Button)>
                    </div>
                  </Typography>
                </WithStyles(Typography)>
              </RefHolder>
            </Target>
            <Popper
              className="MuiTooltip-popper-2 MuiTooltip-popperClose-3"
              component="div"
              eventsEnabled={false}
              modifiers={Object {}}
              placement="bottom"
            >
              <div
                className="MuiTooltip-popper-2 MuiTooltip-popperClose-3"
                style={
                  Object {
                    "left": 0,
                    "opacity": 0,
                    "pointerEvents": "none",
                    "position": "absolute",
                    "top": 0,
                  }
                }
              >
                <div
                  aria-hidden={true}
                  className="MuiTooltip-tooltip-4 MuiTooltip-tooltipPlacementBottom-8"
                  id="tooltip-icon"
                  role="tooltip"
                >
                  to button
                </div>
              </div>
            </Popper>
          </div>
        </Manager>
      </EventListener>
    </Tooltip>
  </WithStyles(Tooltip)>
</Btn>
`;
